# embassy

embassy-macros/src/: lib.rs
embassy-macros/src/chip/: samd.rs
embassy-nrf/: Cargo.toml
embassy-nrf/src/: gpio.rs  gpiote.rs  spim.rs  twim.rs  uarte.rs
embassy-samd/: Cargo.toml
embassy-samd/src/: gpio.rs  lib.rs
examples/nrf/: Cargo.toml
